csharp/Miniaudio/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace Miniaudio.Native
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "miniaudio";





        [DllImport(__DllName, EntryPoint = "ma_wrap_version_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* ma_wrap_version_string();

        [DllImport(__DllName, EntryPoint = "ma_wrap_engine_init", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* ma_wrap_engine_init();

        [DllImport(__DllName, EntryPoint = "ma_wrap_engine_uninit", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_engine_uninit(void* engine);

        [DllImport(__DllName, EntryPoint = "ma_wrap_engine_start", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int ma_wrap_engine_start(void* engine);

        [DllImport(__DllName, EntryPoint = "ma_wrap_engine_stop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int ma_wrap_engine_stop(void* engine);

        [DllImport(__DllName, EntryPoint = "ma_wrap_engine_set_volume", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_engine_set_volume(void* engine, float volume);

        [DllImport(__DllName, EntryPoint = "ma_wrap_engine_get_sample_rate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint ma_wrap_engine_get_sample_rate(void* engine);

        [DllImport(__DllName, EntryPoint = "ma_wrap_register_memory", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int ma_wrap_register_memory(void* engine, byte* name, void* data, int size);

        [DllImport(__DllName, EntryPoint = "ma_wrap_unregister_memory", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int ma_wrap_unregister_memory(void* engine, byte* name);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_load", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* ma_wrap_sound_load(void* engine, byte* name, uint flags);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_unload", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_unload(void* sound);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_play", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int ma_wrap_sound_play(void* sound);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_stop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int ma_wrap_sound_stop(void* sound);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_volume", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_volume(void* sound, float volume);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_pitch", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_pitch(void* sound, float pitch);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_pan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_pan(void* sound, float pan);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_looping", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_looping(void* sound, int looping);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_is_playing", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int ma_wrap_sound_is_playing(void* sound);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_at_end", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int ma_wrap_sound_at_end(void* sound);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_seek_to_frame", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int ma_wrap_sound_seek_to_frame(void* sound, uint frame);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_fade", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_fade(void* sound, float volumeBeg, float volumeEnd, uint milliseconds);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_spatialization_enabled", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_spatialization_enabled(void* sound, int enabled);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_position", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_position(void* sound, float x, float y, float z);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_velocity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_velocity(void* sound, float x, float y, float z);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_attenuation_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_attenuation_model(void* sound, int model);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_rolloff", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_rolloff(void* sound, float rolloff);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_min_distance", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_min_distance(void* sound, float distance);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_max_distance", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_max_distance(void* sound, float distance);

        [DllImport(__DllName, EntryPoint = "ma_wrap_sound_set_doppler_factor", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_sound_set_doppler_factor(void* sound, float factor);

        [DllImport(__DllName, EntryPoint = "ma_wrap_listener_set_position", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_listener_set_position(void* engine, uint index, float x, float y, float z);

        [DllImport(__DllName, EntryPoint = "ma_wrap_listener_set_direction", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_listener_set_direction(void* engine, uint index, float x, float y, float z);

        [DllImport(__DllName, EntryPoint = "ma_wrap_listener_set_velocity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_listener_set_velocity(void* engine, uint index, float x, float y, float z);

        [DllImport(__DllName, EntryPoint = "ma_wrap_listener_set_world_up", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ma_wrap_listener_set_world_up(void* engine, uint index, float x, float y, float z);


    }



}
